<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/city"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/thumbnailIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/cityText"
        android:layout_marginTop="10dp"
        android:background="#80000000" />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/temp"
        android:textColor="#fff"
        android:textSize="46sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/windText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thumbnailIcon"
        android:layout_marginTop="35dp"
        android:text="@string/wind"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cloudText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windText"
        android:layout_marginTop="5dp"
        android:text="@string/cloud"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pressureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cloudText"
        android:layout_marginTop="5dp"
        android:text="@string/pressure"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/humidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressureText"
        android:layout_marginTop="5dp"
        android:text="@string/humidity"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/riseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humidText"
        android:layout_marginTop="5dp"
        android:text="@string/sunrise"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/setText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riseText"
        android:layout_marginTop="5dp"
        android:text="@string/sunset"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/updateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/last_updated"
        android:textColor="#fff"
        android:textSize="14sp" />

</RelativeLayout>