<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/activity_toolbar" />

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:text="@string/city"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/thumbnailIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/updateText"
        android:layout_marginTop="15dp"
        android:background="#0000" />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/temp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="70sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/windText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thumbnailIcon"
        android:layout_marginTop="35dp"
        android:text="@string/wind"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/cloudText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windText"
        android:layout_marginTop="5dp"
        android:text="@string/cloud"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/pressureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cloudText"
        android:layout_marginTop="5dp"
        android:text="@string/pressure"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/humidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressureText"
        android:layout_marginTop="5dp"
        android:text="@string/humidity"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/riseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humidText"
        android:layout_marginTop="5dp"
        android:text="@string/sunrise"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/setText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/riseText"
        android:layout_marginTop="5dp"
        android:text="@string/sunset"
        android:textColor="@color/colorPrimaryText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/updateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/last_updated"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

</RelativeLayout>