<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/a_counter_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="?homeAsUpIndicator"
        android:padding="16dp"
        app:tint="@color/colorPrimaryDark"
        android:background="?selectableItemBackgroundBorderless" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="58dp"
        android:layout_toEndOf="@+id/a_counter_back"
        android:layout_toRightOf="@+id/a_counter_back"
        android:fontFamily="sans-serif-thin"
        android:letterSpacing="0.1"
        android:text="@string/action_settings"
        android:textColor="@color/colorAccentText"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/a_counter_back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/changeCityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/change_city"
            android:textColor="@color/colorAccentText"
            android:textSize="25sp"
            android:letterSpacing="0.1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cityFilter"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="14dp"
            android:hint="Поиск"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/userList"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/citiesList"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityFilter" />
        </LinearLayout>

        <TextView
            android:id="@+id/unitsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/units"
            android:textColor="@color/colorAccentText"
            android:textSize="25sp"
            android:letterSpacing="0.1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

            <TextView
                android:id="@+id/tempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="@color/colorAccentText"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/spinTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccentText"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>